# ecommerce_analytics

./: .gitignore  pyproject.toml
airflow/: pyproject.toml
dagster/: pyproject.toml
grafana/: Dockerfile  docker-compose.yaml
mock_sales_api/: Dockerfile  README.md  main.py
mock_sales_api/api/: main.py
mock_sales_api/app/models/: customer.py  product.py  sale.py
mock_sales_api/app/routes/: customers.py  products.py  sales.py
mock_sales_api/app/services/: customer_service.py  product_service.py  sales_service.py
